components/wiki-denkarium/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki
  annotations:
    kube-vip.io/loadbalancerIPs: 192.168.14.11
    cert-manager.io/cluster-issuer: "local-ca-issuer"
spec:
  ingressClassName: cilium
  rules:
  - host: denkarium.nekropolis.irminsul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiki
            port:
              number: 80
  - host: denkarium.irminsul
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiki
            port:
              number: 80
  tls:
  - hosts:
    - denkarium.irminsul
    - denkarium.nekropolis.irminsul
    secretName: wiki-certificate
